<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.android.myapplication.MainActivity">
    <item
        android:id="@+id/action_info"
        android:orderInCategory="100"
        android:title="@string/system_info"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/start_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_dials"
        android:orderInCategory="100"
        android:title="@string/start_dials"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_develop"
        android:orderInCategory="100"
        android:title="@string/develop_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/reboot_recovery"
        android:orderInCategory="100"
        android:title="@string/reboot_recovery"
        app:showAsAction="never" />
</menu>